--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-markdown": "^4.1.0",
     "react-scripts": "3.0.1"
   },
   "scripts": {
