Add prev slide and table support
A new keybinding has been introduced namely `p` for previous slides.

Also, the main formatter has been switched to remarkable as it enjoys
better support and is fast as well. The table support has been added and
bugs in the partitioner have been removed. specifically the erroneous
setting of the slides variable.

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "react-dom": "^16.9.0",
     "react-markdown": "^4.1.0",
     "react-scripts": "3.0.1",
-    "react-transition-group": "^4.2.2"
+    "react-transition-group": "^4.2.2",
+    "remarkable": "^2.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
