--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "node-sass": "^4.12.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-redux": "^7.1.0",
     "react-scripts": "3.0.1",
     "react-transition-group": "^4.2.2",
+    "redux": "^4.0.4",
     "remarkable": "^2.0.0"
   },
   "scripts": {
