--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "react-scripts": "3.0.1",
     "react-transition-group": "^4.2.2",
     "redux": "^4.0.4",
-    "remarkable": "^2.0.0"
+    "remarkable": "^2.0.0",
+    "remarkable-emoji": "^0.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
